<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:id="@+id/bg_top_header"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/ic_bg_topheader"/>

    <ImageView
        android:id="@+id/user_photo"
        android:layout_width="71dp"
        android:layout_height="71dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_photo_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:textSize="20sp"
        android:text=""
        android:id="@+id/user_name"
        android:textColor="#ffffff"
        android:fontFamily="@font/mo_re"
        android:layout_marginTop="32dp"
        android:layout_marginStart="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/user_photo"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:textSize="16sp"
        android:text=""
        android:id="@+id/user_id"
        android:fontFamily="@font/mo_re"
        android:textColor="#ffffff"
        android:layout_marginTop="32dp"
        android:layout_marginStart="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/user_photo"
        app:layout_constraintTop_toTopOf="@id/user_name"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="110dp"
        android:layout_marginBottom="60dp"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:columnOrderPreserved="false"
        android:padding="14dp"
        android:rowCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/bg_top_header"
        app:layout_constraintVertical_bias="0.0"
        app:layout_editor_absoluteX="0dp">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/cardColor"
            android:id="@+id/areas"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="113dp"
                    android:layout_height="101dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/map" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/areas"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/mo_re"
                    android:textColor="@color/textcardColor"
                    android:textSize="14sp"
                    android:textStyle="bold"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/cardColor"
            android:id="@+id/recomm"

            app:cardCornerRadius="8dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/ic_gpa_reult" />

                <TextView
                    android:layout_width="86dp"
                    android:layout_height="37dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/mo_re"
                    android:text="@string/my_recommendations"
                    android:textColor="@color/textcardColor"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/cardColor"
            android:id="@+id/regionRecomm"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/ic_gpa_reult"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/top_rcommendations_for_your_region"
                    android:textColor="@color/textcardColor"
                    android:textSize="14sp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/mo_re"
                    android:textStyle="bold"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/cardColor"
            android:id="@+id/settings"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="128dp"
                    android:layout_height="109dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/settings" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/mo_re"
                    android:text="@string/settings"
                    android:textColor="@color/textcardColor"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>



    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>